[project]
name = "rag-learn"
version = "0.1.0"
description = "Beginner-friendly, provider-agnostic RAG course exercises"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
